k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: hr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hr-frontend
  template:
    metadata:
      labels:
        app: hr-frontend
    spec:
      containers:
      - name: frontend
        image: nouromry/hr-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: hr
spec:
  selector:
    app: hr-frontend
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080   # optional: fix port; remove to let K8s choose
  type: NodePort
